fix: prevent language badge overlap with toggle button on project card

--- a/webiu-ui/src/app/components/projects-card/projects-card.component.scss
+++ b/webiu-ui/src/app/components/projects-card/projects-card.component.scss
@@ -63,7 +63,7 @@
       gap: 10px;
 
       span {
-        padding-right: 25px;
+        margin-right: 50px;
         display: flex;
         gap: 10px;
 
